# linux-wire

./: .gitignore  CMakeLists.txt  CMakePresets.json  GOAL.md  README.md
.github/workflows/: ci.yml  release.yml
_reference/libi2c/example/: i2c_tools.c
_reference/linux/drivers/i2c/: i2c-dev.c
_reference/linux/include/linux/: i2c-dev.h  i2c.h
_reference/linux/include/uapi/: i2c-dev.h
cmake/: linux_wireConfig.cmake.in
docs/: README.md  TODO.md  api.md  example.md  examples.md  index.md  roadmap.md  slave-mode-investigation.md  testing.md
examples/arduino_multiplier/: arduino_multiplier.ino
examples/arduino_peripheral/: README.md  arduino_peripheral.ino  example.md
examples/arduino_peripheral/arduino_multiplier_peripheral/: arduino_multiplier_peripheral.ino
examples/c/: README.md
examples/c/i2c_scanner/: main.c
examples/c/i2c_scanner_strict/: main.c
examples/c/master_multiplier/: main.c
examples/c/master_reader/: main.c
examples/c/master_writer/: main.c
examples/cpp/: README.md
examples/cpp/i2c_scanner/: main.cpp
examples/cpp/i2c_scanner_strict/: main.cpp
examples/cpp/master_multiplier/: main.cpp
examples/cpp/master_writer/: main.cpp
examples/i2c_scanner_strict/: main.cpp
examples/master_multiplier/: main.cpp
examples/master_reader/: main.cpp
include/: Wire.h  linux_wire.h
src/: Wire.cpp  linux_wire.c
tests/: CMakeLists.txt  mock_linux_wire.cpp  mock_linux_wire.h  test_linux_wire_c.c  test_wire.cpp
